tests/NormalTests/paczka1/fuzzy1/38535680.err
Error in line 2: 9PzsNsxkJ A142 10,0
Error in line 6: 9PzsNsxkJ A683 49,3
Error in line 9: dJl06iUHluH A683 9,7
Error in line 19: dJl06iUHluH S746 37,3
Error in line 34: dJl06iUHluH S746 84,25
Error in line 39: 91M A715 19,2
